--- a/pntemplates/invitation_admin_main.htm
+++ b/pntemplates/invitation_admin_main.htm
@@ -21,7 +21,7 @@
 </pre>
 <br /><br />
 <h1><!--[pnml name="_INVITATION_INTEGRATION"]--></h1>
-<!--[pnml name="_INVITATION_INTEGRATIONCALL"]-->: XXXXXXXX = USER-ID<br /><br />
+<!--[pnml name="_INVITATION_INTEGRATIONCALL"]-->: $uid = USER-ID<br /><br />
 <code>
-&lt;!--[pnmodapifunc modname="Invitation" type="user" func="getCode" uid="XXXXXXXX"]--&gt;
+&lt;!--[pnmodapifunc modname="Invitation" type="user" func="getCode" uid=$uid]--&gt;
 </code>
