added versioncheck plugin into admin interface

--- a/Invitation/pntemplates/invitation_admin_main.htm
+++ b/Invitation/pntemplates/invitation_admin_main.htm
@@ -1,5 +1,6 @@
 <!--[ admincategorymenu xhtml=1 ]-->
 
+<!--[versioncheck module="Invitation"]-->
 <br /><!--[insert name="getstatusmsg"]-->
 <br />
 <h1><!--[pnml name="_INVITATION_ADMINTITLE"]--></h1>
