--- a/pntemplates/invitation_user_main.htm
+++ b/pntemplates/invitation_user_main.htm
@@ -1,9 +1,9 @@
 <!--[* $Id$ *]-->
 <!--[insert name="getstatusmsg"]-->
 
-<h1><!--[pnml name="_INVITATION_INVITEUSER"]--></h1>
+<h1><!--[gt text="Invite friends to sign up here"]--></h1>
 <br /><br />
-<!--[pnml name="_INVITATION_INVITEUSEREXPLANATION"]-->
+<!--[gt text=""]-->
 <br /><br />
 <!--[pnform]-->
     <!--[pnformvalidationsummary]-->
