--- a/Invitation/pntemplates/invitation_block_latest_modify.htm
+++ b/Invitation/pntemplates/invitation_block_latest_modify.htm
@@ -1,6 +1,6 @@
 <tr>
   <td>
-    <label for="invitation_numitems"><!--[pnml name="_INVITATION_OFUSERSTOSHOW"]--></label>
+    <label for="invitation_numitems"><!--[gt text="How many user should be shown in block?"]--></label>
   </td>
   <td>
     <input id="invitation_numitems" type="text" name="numitems" value="<!--[$numitems|pnvarprephtmldisplay]-->" />
