--- a/Invitation/pntemplates/invitation_admin_main.htm
+++ b/Invitation/pntemplates/invitation_admin_main.htm
@@ -23,7 +23,7 @@
 </pre>
 <br /><br />
 <h1><!--[gt text="Integration into Zikula"]--></h1>
-<!--[gt text="For MyProfil users this integration does not have to be made - Invitation is already fully integrated. For other modules please write these lines into the profile module template that displays a profile and make sure that the uid parameter is the right one. This may depend on the module you use."]-->
+<!--[gt text="For MyProfile users this integration does not have to be made - Invitation is already fully integrated. For other modules please write these lines into the profile module template that displays a profile and make sure that the uid parameter is the right one. This may depend on the module you use."]-->
 <br /><br />
 <!--[gt text="Integration code for display user profile template"]-->: $uid = USER-ID<br /><br />
 <code>
