--- a/Invitation/pntemplates/invitation_user_main.htm
+++ b/Invitation/pntemplates/invitation_user_main.htm
@@ -3,18 +3,18 @@
 
 <h1><!--[gt text="Invite friends to sign up here"]--></h1>
 <br /><br />
-<!--[gt text=""]-->
+<!--[gt text="An email with link and information about this page will be added to your text."]-->
 <br /><br />
 <!--[pnform]-->
     <!--[pnformvalidationsummary]-->
     
     <ol>
-    <!--[pnformlabel for="name" text="_INVITATION_YOURNAME"]-->:
-    <!--[pnformtextinput id="name" maxLength="25" mandatory="1"]--><br />
-    <li><!--[pnformlabel for="email" text="_INVITATION_EMAIL"]-->:
-    <!--[pnformemailinput id="email" mandatory="1"]-->
+    <!--[pnformlabel for="name" __text="Your name"]-->:
+    <!--[pnformtextinput id="name" maxLength="25" mandatorysym="1" mandatory="1"]--><br />
+    <li><!--[pnformlabel for="email" __text="Your friend's email address"]-->:
+    <!--[pnformemailinput id="email" mandatorysym="1" mandatory="1"]-->
     <br /><br /></li>
-    <!--[pnformlabel for="email2" text="_INVITATION_MOREEMAILS"]-->:<br />
+    <!--[pnformlabel for="email2" __text="Send invitation to other friends, too:"]--><br />
     <li><!--[pnformemailinput id="email2" mandatory="0"]--></li>
     <li><!--[pnformemailinput id="email3" mandatory="0"]--></li>
     <li><!--[pnformemailinput id="email4" mandatory="0"]--></li>
@@ -24,8 +24,8 @@
     <li><!--[pnformemailinput id="email8" mandatory="0"]--></li>
     </ol>
 	<br />
-    <!--[pnformlabel for="text" text="_INVITATION_INVITATIONTEXT"]-->:<br />
+    <!--[pnformlabel for="text" __text="You can add some personal text that will be sent to your friend - just write why the invited person(s) should register here, too."]--><br />
     <!--[pnformtextinput id="text" textMode="multiline" rows="5" cols="50"]-->
 	<br /><br />
-	<!--[pnformbutton commandName="invite" text="_INVITATION_INVITEFRIEND"]-->
+	<!--[pnformbutton commandName="invite" __text="Send Invitations"]-->
 <!--[/pnform]-->
