--- a/pntemplates/invitation_user_plugin.htm
+++ b/pntemplates/invitation_user_plugin.htm
@@ -1,6 +1,6 @@
 <!--[* $Id$ *]-->
 <div>
-<!--[pnml name="_INVITATION_INVITEDBY"]-->: <!--[$inv_uname|userprofilelink]--><br />
+<!--[gt text="This user was invited by"]--> <!--[$inv_uname|userprofilelink]--><br />
 <!--[if $inv_avatar ne "" and $inv_avatar ne "blank.gif"]-->
 	<img src="<!--[pngetbaseurl]-->/images/avatar/<!--[$inv_avatar]-->" />
 <!--[/if]-->
