--- a/pntemplates/invitation_user_main.htm
+++ b/pntemplates/invitation_user_main.htm
@@ -1,5 +1,6 @@
 <!--[* $Id$ *]-->
 <!--[insert name="getstatusmsg"]-->
+<!--[pnajaxheader prototype=true scriptaculous=true effects=true]-->
 
 <h1><!--[gt text="Invite friends to sign up here"]--></h1>
 <br /><br />
@@ -14,7 +15,10 @@
     <li><!--[pnformlabel for="email" __text="Your friend's email address"]-->:
     <!--[pnformemailinput id="email" mandatorysym="1" mandatory="1"]-->
     <br /><br /></li>
-    <!--[pnformlabel for="email2" __text="Send invitation to other friends, too:"]--><br />
+    <!--[pnformlabel for="email2" __text="Send invitation to other friends, too:"]-->
+    <img id="addClick" class="inv_link z-hide" src="images/icons/extrasmall/add_user.gif" />
+    <br />
+    <div id="invMails">
     <li><!--[pnformemailinput id="email2" mandatory="0"]--></li>
     <li><!--[pnformemailinput id="email3" mandatory="0"]--></li>
     <li><!--[pnformemailinput id="email4" mandatory="0"]--></li>
@@ -22,6 +26,7 @@
     <li><!--[pnformemailinput id="email6" mandatory="0"]--></li>
     <li><!--[pnformemailinput id="email7" mandatory="0"]--></li>
     <li><!--[pnformemailinput id="email8" mandatory="0"]--></li>
+    </div>
     </ol>
 	<br />
     <!--[pnformlabel for="text" __text="You can add some personal text that will be sent to your friend - just write why the invited person(s) should register here, too."]--><br />
@@ -29,3 +34,13 @@
 	<br /><br />
 	<!--[pnformbutton commandName="invite" __text="Send Invitations"]-->
 <!--[/pnform]-->
+
+<script type="text/javascript">
+    $('addClick').removeClassName('z-hide');
+    $('invMails').hide();
+
+    $('addClick').observe('click',function() {
+        $('invMails').appear();
+        $('addClick').hide();
+    });
+</script>
